# Ros2-C-

./: README.md  ros2_node_oop_template.cpp  shared_ptr.cpp
ROS2-C++/: Shared Pointers.md
ROS2-C++/.obsidian/: workspace.json
ROS2-C++/src/lifecycle_demo/: CMakeLists.txt  package.xml
ROS2-C++/src/lifecycle_demo/src/: first_node.cpp  listener.cpp
my_cpp_pkg/: CMakeLists.txt
my_cpp_pkg/src/: robot_news_station.cpp
src/my_cpp_pkg/: package.xml
